Fix some styling and spacing issues, add link to poet page from poem page

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -127,7 +127,7 @@
     width: 100vw;
     opacity: 0.5;
     position: absolute;
-    top: 18.25rem;
+    top: 19rem;
     z-index: 1;
     @include tablet {
       top: 20.25rem;
