--- a/client/src/pages/SinglePoetPage/SinglePoetPage.scss
+++ b/client/src/pages/SinglePoetPage/SinglePoetPage.scss
@@ -39,23 +39,22 @@
       flex-direction: column;
       gap: 1rem;
     }
-    &--name-years {
-      margin-top: 1rem;
-      display: flex;
-      flex-direction: column;
-    }
   }
   &__img {
+    animation: slideUp 500ms ease-in-out 150ms backwards;
     width: 100%;
     height: 25rem;
     object-fit: cover;
     border-radius: 10px;
   }
-  &__years {
-    @include body-copy;
+  &__name {
+    @include page-heading;
+    animation: slideUp 500ms ease-in-out 250ms backwards;
+    margin-top: 1rem;
   }
   &__bio {
     @include body-copy;
+    animation: slideUp 500ms ease-in-out 350ms backwards;
     white-space: pre-wrap;
     color: gray;
     font-size: 14px;
